[project]
name = "vultus-utils"
description = "Utilities package for common functions, calculations, logging and error handling"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "werkzeug",
    "boto3",
    "numpy",
    "scipy",
    "rasterio",
    "pyparsing",
    "pydantic",
    "flask",
    "seqlog",
]

[project.optional-dependencies]
black = [
    "black==22.8.0",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel ~=0.37.1",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.setuptools]
packages = ["vultus_utils"]
